# libzbc

./: .gitignore  CODE_OF_CONDUCT.md  COPYING  COPYING.BSD  Makefile.am  README  README.md  autogen.sh  configure.ac  exports  libzbc.pc.in  libzbc.spec  libzbc.spec.in  zbc_cmr_wp_check
documentation/: libzbc.doxygen
include/: Makemodule.am  config.h.in  zbc_private.h
include/libzbc/: zbc.h
lib/: Makefile.am  Makemodule.am  exports  libzbc.pc.in  zbc.c  zbc.h  zbc_ata.c  zbc_blkdev.c  zbc_block.c  zbc_dev.c  zbc_fake.c  zbc_log.h  zbc_scsi.c  zbc_scsi.h  zbc_sg.c  zbc_sg.h  zbc_utils.c  zbc_utils.h
m4/: dontremove
rpmbuild/: libzbc.spec.in
rpmbuild/SPECS/: libzbc.spec
test/: zbc_dhsmr_test.sh  zbc_test.sh  zbc_test_all.sh  zbc_xmr_test.sh
test/close_zone/: Makemodule.am  zbc_test_close_zone.c
test/finish_zone/: Makemodule.am
test/open_zone/: Makemodule.am
test/print_devinfo/: Makemodule.am
test/programs/: Makefile.am  zbc_test_convert_realms  zbc_test_report_realms
test/programs/close_zone/: Makefile.am  Makemodule.am  zbc_test_close_zone.c
test/programs/convert_realms/: Makemodule.am  zbc_test_convert_realms.c
test/programs/dev_control/: Makefile.am  Makemodule.am  zbc_test_dev_control.c
test/programs/domain_report/: Makemodule.am  zbc_test_domain_report.c
test/programs/finish_zone/: Makefile.am  Makemodule.am  zbc_test_finish_zone.c
test/programs/media_convert/: Makemodule.am  zbc_test_media_convert.c
test/programs/media_report/: Makemodule.am  zbc_test_media_report.c
test/programs/open_zone/: Makefile.am  Makemodule.am  zbc_test_open_zone.c
test/programs/print_devinfo/: Makefile.am  Makemodule.am  zbc_test_print_devinfo.c
test/programs/read_zone/: Makefile.am  Makemodule.am  zbc_test_read_zone.c
test/programs/report_domains/: Makefile.am  Makemodule.am  zbc_test_report_domains.c
test/programs/report_realms/: Makefile.am  Makemodule.am  zbc_test_report_realms.c
test/programs/report_zones/: Makefile.am  Makemodule.am  zbc_test_report_zones.c
test/programs/reset_write_ptr/: Makemodule.am  zbc_test_reset_write_ptr.c
test/programs/reset_zone/: Makefile.am  Makemodule.am  zbc_test_reset_zone.c
test/programs/write_zone/: Makefile.am  Makemodule.am  zbc_test_write_zone.c
test/programs/zone_activate/: Makefile.am  Makemodule.am  zbc_test_zone_activate.c
test/read_zone/: Makemodule.am
test/report_zones/: Makemodule.am
test/reset_write_ptr/: Makemodule.am
test/script/01_CommandCheck/: 001.sh  005.sh  007.sh  010.sh
test/script/02_StateMachineCheck/: 001.sh  002.sh  004.sh  007.sh  009.sh  010.sh  011.sh  013.sh  015.sh  016.sh  017.sh  019.sh  025.sh  029.sh  031.sh  034.sh  036.sh  037.sh  040.sh  041.sh  042.sh  043.sh  044.sh  045.sh  047.sh  048.sh  050.sh  052.sh
test/scripts/: zbc_test.sh  zbc_test_common_functions.sh  zbc_test_lib.sh
test/scripts/00_command_completion_check/: 010.sh  011.sh  012.sh  013.sh  014.sh  015.sh  020.sh  030.sh  040.sh  050.sh  060.sh  061.sh  062.sh  063.sh  070.sh  071.sh  072.sh  073.sh
test/scripts/01_CommandCheck/: 002.sh  003.sh  004.sh  006.sh  008.sh  009.sh  011.sh  012.sh  013.sh
test/scripts/01_command_check/: 001.sh  002.sh  003.sh  004.sh  005.sh  006.sh  007.sh  008.sh  009.sh  010.sh  011.sh  012.sh  013.sh  014.sh  015.sh  016.sh  017.sh  018.sh  019.sh  020.sh
test/scripts/01_sk_ascq_check/: 010.sh  011.sh  020.sh  021.sh  022.sh  023.sh  024.sh  (+110 more)
test/source/: Makeconf
test/write_zone/: Makemodule.am
tools/: Makefile.am
tools/close_zone/: Makefile.am  Makemodule.am  zbc_close_zone.8  zbc_close_zone.c
tools/cmr_wp_check/: Makemodule.am  zbc_cmr_wp_check
tools/convert_realms/: Makemodule.am  zbc_convert_realms.c
tools/dev_control/: Makefile.am  Makemodule.am  zbc_dev_control.c
tools/domain_report/: Makemodule.am  zbc_domain_report.c
tools/finish_zone/: Makefile.am  Makemodule.am  zbc_finish_zone.8  zbc_finish_zone.c
tools/gui/: Makefile.am  Makemodule.am  gzbc.8  gzbc.c  gzbc.desktop.in  gzbc.h  gzbc_if.c  gzbc_if_dev.c  org.gnome.gzbc.policy.in
tools/gzbc/: Makemodule.am  gzbc.c  gzbc.h  gzbc_if.c  gzbc_if_dev.c
tools/gzviewer/: Makemodule.am  gzviewer.c  gzviewer.h  gzviewer_if.c
tools/info/: Makefile.am  Makemodule.am  zbc_info.8  zbc_info.c
tools/inquiry/: Makemodule.am  zbc_inquiry.c
tools/lkvs/: AUTHORS  Makefile.am  README  autogen.sh  configure.ac
tools/lkvs/docs/: doxy.config
tools/lkvs/gtest/: Makefile.am
tools/lkvs/src/: Makefile.am
tools/lkvs/src/examples/: Makefile.am  lkvsfileput.cc  lkvsget.cc  lkvsmultiget.cc  lkvsmultiput.cc  lkvsput.cc
tools/lkvs/src/javabind/: Lkvs.java  Makefile.am  Tester.java
tools/lkvs/src/liblkvs/: Makefile.am  liblkvs.cc  liblkvs.hpp  lkvs.h  lkvs.hpp  sha256.c  sha256.h
tools/lkvs/src/pybind/: Makefile.am  example.py  lkvsdev.pyx  setup.py
tools/lkvs/src/test/: Makefile.am  lkvsdev_test.cc  zbc_reset.sh
tools/media_convert/: Makemodule.am  zbc_media_convert.c
tools/media_report/: Makemodule.am  zbc_media_report.c
tools/open_zone/: Makefile.am  Makemodule.am  zbc_open_zone.8  zbc_open_zone.c
tools/read_zone/: Makefile.am  Makemodule.am  zbc_read_zone.8  zbc_read_zone.c
tools/report_domains/: Makefile.am  Makemodule.am  zbc_report_domains.c
tools/report_realms/: Makefile.am  Makemodule.am  zbc_report_realms.c
tools/report_zones/: Makefile.am  Makemodule.am  zbc_report_zones.8  zbc_report_zones.c
tools/reset_write_ptr/: Makemodule.am  zbc_reset_write_ptr.c
tools/reset_zone/: Makefile.am  Makemodule.am  zbc_reset_zone.8  zbc_reset_zone.c
tools/set_write_ptr/: Makefile.am  Makemodule.am  zbc_set_write_ptr.8  zbc_set_write_ptr.c
tools/set_zones/: Makefile.am  Makemodule.am  zbc_set_zones.8  zbc_set_zones.c
tools/viewer/: Makefile.am  gzviewer.8  gzviewer.c  gzviewer.desktop.in  gzviewer.h  gzviewer_if.c  org.gnome.gzviewer.policy.in
tools/write_zone/: Makefile.am  Makemodule.am  zbc_write_zone.8  zbc_write_zone.c
tools/zone_activate/: Makefile.am  Makemodule.am  zbc_zone_activate.c
tools/zone_op/: Makefile.am  Makemodule.am  zbc_zone_op.c  zbc_zone_op.h
(+1015 files in other folders)
