# SPDX-License-Identifier: LGPL-3.0-or-later
#
# Copyright (c) 2009-2014, HGST, Inc. All rights reserved.
# Copyright (c) 2020 Western Digital Corporation or its affiliates.

bin_PROGRAMS += zbc_read_zone

zbc_read_zone_SOURCES = read_zone/zbc_read_zone.c
zbc_read_zone_LDADD = $(libzbc_ldadd)

dist_man8_MANS += read_zone/zbc_read_zone.8
