# SPDX-License-Identifier: LGPL-3.0-or-later
#
# Copyright (c) 2009-2014, HGST, Inc. All rights reserved.
# Copyright (c) 2023 Western Digital Corporation or its affiliates.

bin_PROGRAMS += zbc_report_domains

zbc_report_domains_SOURCES = report_domains/zbc_report_domains.c
zbc_report_domains_LDADD = $(libzbc_ldadd)
