# SPDX-License-Identifier: LGPL-3.0-or-later
#
# Copyright (c) 2009-2014, HGST, Inc. All rights reserved.
# Copyright (c) 2023 Western Digital Corporation or its affiliates.

bin_PROGRAMS += zbc_report_realms

zbc_report_realms_SOURCES = report_realms/zbc_report_realms.c
zbc_report_realms_LDADD = $(libzbc_ldadd)
