# SPDX-License-Identifier: LGPL-3.0-or-later
#
# Copyright (c) 2009-2014, HGST, Inc. All rights reserved.
# Copyright (c) 2020 Western Digital Corporation or its affiliates.

bin_PROGRAMS += zbc_report_zones

zbc_report_zones_SOURCES = report_zones/zbc_report_zones.c
zbc_report_zones_LDADD = $(libzbc_ldadd)

dist_man8_MANS += report_zones/zbc_report_zones.8
