# SPDX-License-Identifier: LGPL-3.0-or-later
#
# Copyright (c) 2009-2014, HGST, Inc. All rights reserved.
# Copyright (c) 2020 Western Digital Corporation or its affiliates.

bin_PROGRAMS += zbc_set_zones

zbc_set_zones_SOURCES = set_zones/zbc_set_zones.c
zbc_set_zones_LDADD = $(libzbc_ldadd)

dist_man8_MANS += set_zones/zbc_set_zones.8
