# SPDX-License-Identifier: LGPL-3.0-or-later
#
# Copyright (c) 2009-2014, HGST, Inc. All rights reserved.
# Copyright (c) 2020 Western Digital Corporation or its affiliates.

bin_PROGRAMS += zbc_write_zone

zbc_write_zone_SOURCES = write_zone/zbc_write_zone.c
zbc_write_zone_LDADD = $(libzbc_ldadd)

dist_man8_MANS += write_zone/zbc_write_zone.8
