# SPDX-License-Identifier: LGPL-3.0-or-later
#
# Copyright (c) 2009-2014, HGST, Inc. All rights reserved.
# Copyright (c) 2023 Western Digital Corporation or its affiliates.

bin_PROGRAMS += zbc_zone_activate

zbc_zone_activate_SOURCES = zone_activate/zbc_zone_activate.c
zbc_zone_activate_LDADD = $(libzbc_ldadd)
