# SPDX-License-Identifier: BSD-2-Clause
# SPDX-License-Identifier: LGPL-3.0-or-later
#
# Copyright (c) 2009-2014, HGST, Inc. All rights reserved.
# Copyright (c) 2020 Western Digital Corporation or its affiliates.

noinst_PROGRAMS += zbc_test_close_zone

zbc_test_close_zone_SOURCES = close_zone/zbc_test_close_zone.c

zbc_test_close_zone_LDADD = $(libzbc_ldadd)
zbc_test_close_zone_LDFLAGS = -no-install
