# SPDX-License-Identifier: BSD-2-Clause
# SPDX-License-Identifier: LGPL-3.0-or-later
#
# Copyright (c) 2009-2014, HGST, Inc. All rights reserved.
# Copyright (c) 2023 Western Digital Corporation or its affiliates.

noinst_PROGRAMS += zbc_test_dev_control

zbc_test_dev_control_SOURCES = dev_control/zbc_test_dev_control.c

zbc_test_dev_control_LDADD = $(libzbc_ldadd)
zbc_test_dev_control_LDFLAGS = -no-install
