# SPDX-License-Identifier: BSD-2-Clause
#
# Copyright (c) 2009-2014, HGST, Inc. All rights reserved.
# Copyright (c) 2020 Western Digital Corporation or its affiliates.

noinst_PROGRAMS += zbc_test_print_devinfo

zbc_test_print_devinfo_SOURCES = print_devinfo/zbc_test_print_devinfo.c

zbc_test_print_devinfo_LDADD = $(libzbc_ldadd)
zbc_test_print_devinfo_LDFLAGS = -no-install
