# SPDX-License-Identifier: BSD-2-Clause
#
# Copyright (c) 2009-2014, HGST, Inc. All rights reserved.
# Copyright (c) 2020 Western Digital Corporation or its affiliates.

noinst_PROGRAMS += zbc_test_write_zone

zbc_test_write_zone_SOURCES = write_zone/zbc_test_write_zone.c

zbc_test_write_zone_LDADD = $(libzbc_ldadd)
zbc_test_write_zone_LDFLAGS = -no-install
