# SPDX-License-Identifier: BSD-2-Clause
# SPDX-License-Identifier: LGPL-3.0-or-later
#
# Copyright (c) 2009-2014, HGST, Inc. All rights reserved.
# Copyright (c) 2023 Western Digital Corporation or its affiliates.

noinst_PROGRAMS += zbc_test_zone_activate

zbc_test_zone_activate_SOURCES = zone_activate/zbc_test_zone_activate.c

zbc_test_zone_activate_LDADD = $(libzbc_ldadd)
zbc_test_zone_activate_LDFLAGS = -no-install
